# TimelineForAudio

./: .dockerignore  .env.example  .gitignore  AGENTS.md  MODEL_AND_RUNTIME_NOTES.md  README.ja.md  README.md  THIRD_PARTY_NOTICES.md  cli.command  cli.ps1  docker-compose.gpu.yml  docker-compose.yml  package-lock.json  package.json  settings.example.json  start.bat  start.command  start.ps1  start.sh  stop.command  stop.ps1  stop.sh  tailwind.config.cjs  tfa.bat  tfa.command  tfa.ps1  timeline-product.json  uninstall.bat  uninstall.command  uninstall.ps1
worker/: pyproject.toml  requirements-cpu.txt  requirements-gpu.txt
worker/src/audio2timeline_worker/: audio_features.py  catalog.py  cli.py  contracts.py  discovery.py  eta.py  job_store.py  processor.py  settings.py  signature.py  timeline.py  transcribe.py
worker/src/timeline_for_audio_worker/: __main__.py  acoustic_units.py  api_server.py  artifacts.py  audio_features.py  (+32 more)
worker/tests/: test_acoustic_units.py  test_api_server.py  test_artifacts.py  test_audio_features.py  test_cli.py  test_commands.py  test_context_builder.py  test_contracts.py  test_diarization.py  test_eta.py  test_evaluation.py  test_ffmpeg_utils.py  test_fs_utils.py  test_ipa_backend.py  test_job_store.py  test_model_inventory.py  test_normalization.py  test_operations.py  test_processor.py  test_reconstruction.py  test_review_artifact.py  test_run_store.py  test_runtime_guard.py  test_runtime_profile.py  test_screens.py  test_settings.py  test_signature.py  test_timeline.py  test_timeline_events.py  test_transcribe.py  test_transcription.py
(+120 files in other folders)
